# simple.ai

./: .gitignore  ActionSpace.ipynb  DeepRacer-baeys-idea.ipynb  README.md  Race-Line-Calculation.ipynb  Untitled.ipynb  actions.txt  raceline.npy  raceline.py  reward.py  speed.txt
.ipynb_checkpoints/: ActionSpace-checkpoint.ipynb  DeepRacer-baeys-idea-checkpoint.ipynb  Race-Line-Calculation-checkpoint.ipynb  windturbine-checkpoint.ipynb
simple-rl-car-racing/: LICENSE  Makefile  README.md  pyproject.toml
simple-rl-car-racing/docs/: AWS Deep Racer Competition.md  Reinforcement Learning Game Application.md  mkdocs.yml
simple-rl-car-racing/docs/docs/: index.md
simple-rl-car-racing/game/: play.py
simple-rl-car-racing/notebooks/: CartRacingv2-DQN.ipynb  HSdRMFpHAdpVNdrbGd.webm  Random_CartRacingv2.ipynb  Untitled.ipynb
