[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simple-rl"
version = "0.0.1"
description = "Project to demonstrate how to train ai agents to perform in the Open AI's gymnasium package using reinforcement learning methods."
authors = [
  { name = "Yuri Marca" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.8"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["simple-rl"]
force_sort_within_sections = true
